<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <ListPreference
        android:defaultValue="5"
        android:dialogTitle="@string/select_group"
        android:key="dTVGuide_DefaultGroup"
        android:entryValues="@array/channel_group_index"
        android:entries="@array/channel_group"
        android:title="@string/pref_default_group"
        android:summary="@string/pref_default_group_summary"></ListPreference>
    <PreferenceCategory android:title="@string/guide_list">
        <CheckBoxPreference
            android:key="dTVGuide_ShowTodayAll"
            android:defaultValue="true"
            android:summaryOn="@string/pref_show_today_all_summary_on"
            android:summaryOff="@string/pref_show_today_all_summary_off"
            android:title="@string/pref_show_today_all"></CheckBoxPreference>
        <CheckBoxPreference
            android:key="dTVGuide_ExpendAll"
            android:defaultValue="false"
            android:summaryOn="@string/pref_expand_all_summary_on"
            android:summaryOff="@string/pref_expand_all_summary_off"
            android:title="@string/pref_expand_all"></CheckBoxPreference>

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/build_information">
        <Preference
            android:key="dTVGuide_VersionInfo"
            android:title="@string/build_information"></Preference>
    </PreferenceCategory>
</PreferenceScreen>
