<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/program_option_refresh"
        android:icon="@drawable/ic_action_refresh"
        android:title="@string/refresh">
    </item>
    <group android:id="@+id/preview_option_group">
        <item
            android:id="@+id/preview_prev_day"
            android:icon="@drawable/ic_action_nav_prev"
            android:title="@string/previous_day">
        </item>
        <item
            android:id="@+id/preview_next_day"
            android:icon="@drawable/ic_action_nav_next"
            android:title="@string/next_day">

        </item>
    </group>
    <item
        android:id="@+id/preference"
        android:icon="@drawable/ic_action_preference"
        android:title="@string/preference">
    </item>
    <!-- android:icon="@android:drawable/ic_menu_preferences" -->

</menu>