<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="dolphin.apps.TaiwanTVGuide.v7.ProgramInfoActivity$PlaceholderFragment">

    <TextView
        style="@style/TextAppearance.AppCompat.Headline"
        android:id="@android:id/title"
        android:text="@string/app_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:paddingBottom="8dp" />

    <TextView
        android:id="@android:id/text1"
        style="@style/TextAppearance.AppCompat.Title"
        android:text="@string/app_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/imdb"
        android:drawablePadding="4dp"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:paddingBottom="4dp"
        android:paddingTop="4dp"
        android:singleLine="true"
        android:maxLines="1"
        android:background="@drawable/selectable_background_holo_orange" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:padding="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@android:id/message"
                style="@style/Base.TextAppearance.AppCompat.Medium"
                android:text="@string/loading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </ScrollView>

    <TextView
        android:id="@android:id/text2"
        android:text="@string/recent_replays"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:layout_gravity="right"
        android:layout_marginRight="8dp"
        android:background="@drawable/selectable_background_holo_orange" />

</LinearLayout>
